logs/mobility/build.make.026.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void mobilityStateMachine(const ros::TimerEvent&)’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:276:19: error: ‘class DropOffController’ has no member named ‘givePublisher’
 dropOffController.givePublisher(infoLogPublisher);
                   ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
